--- a/ytenx/templates/vertical_style.html
+++ b/ytenx/templates/vertical_style.html
@@ -57,6 +57,10 @@
 .table tr th {
   border-style: none;
 }
-.span8 form ul li {
+.horizontal-cn form ul li {
   float: right;
+}
+.horizontal-cn form ul li select option{
+  direction: rtl;
+  unicode-bidi: bidi-override;
 }
