--- a/ytenx/templates/kyonh/sieux_yonh_pieux.html
+++ b/ytenx/templates/kyonh/sieux_yonh_pieux.html
@@ -23,7 +23,7 @@
 </div>
 <div style="writing-mode:horizontal-tb">
 <div class="row">
-  <div id="search" class="span8" style="direction:rtl;unicode-bidi:bidi-override;">
+  <div id="search" class="horizontal-cn">
   <form method="get" action="">
     <ul>
       <li>
