--- a/ytenx/templates/kyonh/dzih_pieux.html
+++ b/ytenx/templates/kyonh/dzih_pieux.html
@@ -15,13 +15,13 @@
         <input type="hidden" name="kyonh" value="1">
         <input type="hidden" name="jtkb" value="1">
         <input type="hidden" name="jtdt" value="1">
-        <button type="submit" class="btn">檢索</button>
+        <button type="submit" class="horizontal-cn btn">檢索</button>
       </form>
     </div>
   </div>
   <div class="row">
     <div class="span10">      
-        <table class="table table-bordered table-condensed">
+      <table class="table table-bordered table-condensed">
         <tr>
           <th width="32">次序</th>
           <th width="32">字</th>
@@ -47,6 +47,8 @@
         </tr>
         {% endfor %}
       </table>
+    </div>
+    <div class="span10">
       {% include "pagination.html" with list=dzih_pieux only %}
     </div>
   </div>
