--- a/ytenx/templates/kyonh/dzih_pieux.html
+++ b/ytenx/templates/kyonh/dzih_pieux.html
@@ -7,7 +7,7 @@
 <div class="page-header">
   <h1>字表 <small>廣韻</small></h1>
 </div>
-<div style="writing-mode:horizontal-tb">
+<div style="writing-mode:horizontal-tb;height:auto;">
   <div class="row">
     <div class="span10">
       <form class="horizontal-cn form-search" method="get" action="{% url 'views.zim' %}">
