--- a/ytenx/templates/kyonh/dzih_pieux.html
+++ b/ytenx/templates/kyonh/dzih_pieux.html
@@ -7,9 +7,9 @@
 <div class="page-header">
   <h1>字表 <small>廣韻</small></h1>
 </div>
-<div style="writing-mode:horizontal-tb;height:auto;">
+<div style="writing-mode:horizontal-tb;">
   <div class="row">
-    <div class="span10">
+    <div class="span10" style="height:auto">
       <form class="horizontal-cn form-search" method="get" action="{% url 'views.zim' %}">
         <input type="text" name="dzih" class="search-query span3">
         <input type="hidden" name="kyonh" value="1">
