--- a/ytenx/templates/vertical_style.html
+++ b/ytenx/templates/vertical_style.html
@@ -27,14 +27,7 @@
           direction: rtl;
           unicode-bidi: bidi-override;
         }
-        .span10 {
-          writing-mode:vertical-rl;
-          text-orientation:mixed;
-          width:100%;
-          height:100%;
-          overflow:auto;
-        }
-        .span12 {
+        .auto-direction {
           writing-mode:vertical-rl;
           text-orientation:mixed;
           width:100%;
