--- a/ytenx/templates/layout.html
+++ b/ytenx/templates/layout.html
@@ -99,7 +99,7 @@
       </div>
     </div>
     <div class="container container-main">
-      <div class="row">
+      <div class="auto-direction row">
         {% block body %}{% endblock %}
       </div>
       <hr>
