--- a/ytenx/templates/vertical_style.html
+++ b/ytenx/templates/vertical_style.html
@@ -8,6 +8,7 @@
           margin-right: 0em;
         }
         .sidebar-nav {
+          writing-mode: horizontal-tb;
           direction: rtl;
           unicode-bidi: bidi-override;
         }
