--- a/ytenx/templates/kyonh/yonh_do.html
+++ b/ytenx/templates/kyonh/yonh_do.html
@@ -7,10 +7,10 @@
 <div class="page-header">
   <h1>等韻圖 <small>廣韻</small></h1>
 </div>
-<div class="row">
-  <div class="span12">
+<div class="row" style="writing-mode:horizontal-tb">
+  <div class="horizontal-cn span12">
     {% include "pagination.html" with list=dzip_list only %}
-    <table class="table table-bordered table-condensed table-striped">
+    <table class="horizontal-cn table table-bordered table-condensed table-striped">
     <tr>
       <td rowspan="2" colspan="3">廣韻韻圖第{{dzip_list.number|sryoh}}</td>
       {% for cjeng_lyih in cjeng_lyih_list %}
