--- a/ytenx/templates/vertical_style.html
+++ b/ytenx/templates/vertical_style.html
@@ -58,3 +58,11 @@
   direction: rtl;
   unicode-bidi: bidi-override;
 }
+.horizontal-cn table {
+  direction: rtl;
+  unicode-bidi: bidi-override;
+}
+.horizontal-cn table tr td {
+  direction: rtl;
+  unicode-bidi: bidi-override;
+}
