--- a/ytenx/templates/vertical_style.html
+++ b/ytenx/templates/vertical_style.html
@@ -46,10 +46,10 @@
   width: auto;
 }
 .table tr td {
-  border-style: none;
+  border-top: none;
 }
 .table tr th {
-  border-style: none;
+  border-top: none;
 }
 .horizontal-cn form ul li {
   float: right;
