--- a/ytenx/templates/vertical_style.html
+++ b/ytenx/templates/vertical_style.html
@@ -45,10 +45,10 @@
 .table {
   width: auto;
 }
-.table tr td {
+.table-remove-border-vertical tr td {
   border-top: none;
 }
-.table tr th {
+.table-remove-border-vertical tr th {
   border-top: none;
 }
 .horizontal-cn form ul li {
