--- a/ytenx/templates/kyonh/index.html
+++ b/ytenx/templates/kyonh/index.html
@@ -15,7 +15,7 @@
   <p>按照廣韻的編排方式，相同韻目的小韻排列在一起，但其聲母爲被標明。廣韻的聲母系統是根據後世的三十六字母、等韻圖等文獻，以及通過反切系聯法得出的。早期的韻圖囿於三十六字母之成見，認爲廣韻聲母系統與三十六字母相同。清儒陳澧最早利用系聯法（即將相同反切上字的小韻合併稱一個等價類）考得廣韻共有<strong>四十聲類</strong>，即從三十六字母的「照穿牀審」中分出「莊初神山」，「喻」中分出「于」，而合併「明微」。白滌洲重新使用系聯法，從「見溪疑影曉來」中再分出了「居去魚於許力」六個聲母，同時區分「明微」，爲<strong>四十七聲類</strong>說。曾运乾在四十七聲類基礎上又將「精清從心」分爲「作子」「倉七」「昨疾」「蘇息」，謂<strong>五十一聲類</strong>。</p>
   <p>王力根據音系學的方法，在三十六字母的基礎上從「照穿牀審」中分出「莊初崇山」與「章昌傳書」，合併「幫滂並明」與「非敷奉微」及「泥」與「孃」，同時將「喻」母三等分出並與「匣」母合併，爲<strong>三十五聲母</strong>。邵榮芬認爲「泥」母與「孃」母不應合併，同時又從「禪」母中分出了「常」母與「俟」母，爲<strong>三十七聲母</strong>。</p>
   <p>韻典網採用了<strong>三十八聲母</strong>分類的系統，在三十七聲母的基礎上，將「喻」母三等分立爲「云」母，不合併到「匣」母，主要原因是《廣韻》反切中沒有涉及「云」母與「匣」母混切，並且「云」母在後世爲次濁音，與全濁的「匣」母不同。儘管「云」母上古來源很可能是「匣」母，但至少在切韻成書時期已經分離，故不應列爲廣韻的一個聲母。</p>
-  <table class="table table-condensed" style="width:auto;">
+  <table class="table table-condensed table-remove-border-vertical" style="width:auto;">
   	<tr>
       <th>聲類</th>
       <th>聲母</th>
