--- a/ytenx/templates/vertical_style.html
+++ b/ytenx/templates/vertical_style.html
@@ -29,11 +29,11 @@
           unicode-bidi: bidi-override;
         }
         .auto-direction {
-          writing-mode:vertical-rl;
-          text-orientation:mixed;
-          width:100%;
-          height:100%;
-          overflow:auto;
+          writing-mode: vertical-rl;
+          text-orientation: mixed;
+          width: 100%;
+          height: 100%;
+          overflow: auto;
         }
 .pagination {
   text-align: right;
@@ -44,6 +44,7 @@
 }
 .table {
   width: auto;
+  text-orientation: upright;
 }
 .table-remove-border-vertical tr td {
   border-top: none;
