--- a/ytenx/templates/vertical_style.html
+++ b/ytenx/templates/vertical_style.html
@@ -44,6 +44,10 @@
 }
 .table {
   width: auto;
+}
+.table tr td{
+  width: auto;
+  text-orientation: upright;
   text-orientation: upright;
 }
 .table-remove-border-vertical tr td {
