--- a/ytenx/templates/byohlyuk/miuk_lyuk.html
+++ b/ytenx/templates/byohlyuk/miuk_lyuk.html
@@ -5,7 +5,7 @@
 <div class="page-header">
   <h1>韻典附錄 <small>資源和工具</small></h1>
 </div>
-<table class="table">
+<table class="table table-remove-border-vertical">
   <tr>
     <td><a href="{% url 'byohlyuk.views.byoh_lyuk' 'TriungKoxHanhNgioxNgioxQimKrauhDrieng' %}">中古漢語語音教程</a></td>
     <td>作者：polyhedron</td>
