--- a/ytenx/templates/vertical_style.html
+++ b/ytenx/templates/vertical_style.html
@@ -72,8 +72,8 @@
   unicode-bidi: bidi-override;
 }
 .latin-below {
-  writing-mode: horizontal-tb
-  font-size: 0.75em
+  writing-mode: horizontal-tb;
+  font-size: 0.75em;
 }
 .vertical_divider {
   width: 5px;
