--- a/ytenx/templates/vertical_style.html
+++ b/ytenx/templates/vertical_style.html
@@ -1,4 +1,4 @@
-
+<style type="text/css">
         blockquote {
           border-left: 0px;
           border-top: 0px;
@@ -73,9 +73,10 @@
 }
 .latin-below {
   writing-mode: horizontal-tb;
-  font-size: 0.75em;
+  font-size: 0.5em;
 }
 .vertical_divider {
   width: 5px;
   background-color: #EAEFF5;
 }
+</style>
