--- a/ytenx/templates/vertical_style.html
+++ b/ytenx/templates/vertical_style.html
@@ -1,25 +1,28 @@
 <style type="text/css">
-        blockquote {
-          border-left: 0px;
-          border-top: 0px;
-        }
-        blockquote::before {
-          content: '';
-          margin-right: 0em;
-        }
-        .sidebar-nav {
-          writing-mode: horizontal-tb;
-          direction: rtl;
-          unicode-bidi: bidi-override;
-        }
-        .sidebar-nav ul li a {
-          direction: rtl;
-          unicode-bidi: bidi-override;
-        }
-        .horizontal-cn-nav ul li {
-          float: right;
-        }      
-        .horizontal-cn-nav ul li a {
+  .badge-info {
+    writing-mode: horizontal-tb;
+  }
+  blockquote {
+    border-left: 0px;
+    border-top: 0px;
+  }
+  blockquote::before {
+    content: '';
+    margin-right: 0em;
+  }
+  .sidebar-nav {
+    writing-mode: horizontal-tb;
+    direction: rtl;
+    unicode-bidi: bidi-override;
+  }
+  .sidebar-nav ul li a {
+    direction: rtl;
+    unicode-bidi: bidi-override;
+  }
+  .horizontal-cn-nav ul li {
+    float: right;
+  }      
+  .horizontal-cn-nav ul li a {
           direction: rtl;
           unicode-bidi: bidi-override;
         }
