--- a/ytenx/templates/vertical_style.html
+++ b/ytenx/templates/vertical_style.html
@@ -1,4 +1,11 @@
 <style type="text/css">
+  .auto-direction {
+    writing-mode: vertical-rl;
+    text-orientation: mixed;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+  }
   .badge-info {
     writing-mode: horizontal-tb;
   }
@@ -7,9 +14,28 @@
     border-top: 0px;
   }
   blockquote::before {
-    content: '';
-    margin-right: 0em;
+    margin-top: 1em;
   }
+  .horizontal-cn {
+    writing-mode:horizontal-tb;
+    direction: rtl;
+    unicode-bidi: bidi-override;
+  }
+  .horizontal-cn form ul li {
+    float: right;
+  }
+  .horizontal-cn form ul li select option{
+    direction: rtl;
+    unicode-bidi: bidi-override;
+  }
+  .horizontal-cn table {
+    direction: rtl;
+    unicode-bidi: bidi-override;
+  }
+  .horizontal-cn table tr td {
+    direction: rtl;
+    unicode-bidi: bidi-override;
+  }  
   .sidebar-nav {
     writing-mode: horizontal-tb;
     direction: rtl;
@@ -23,63 +49,36 @@
     float: right;
   }      
   .horizontal-cn-nav ul li a {
-          direction: rtl;
-          unicode-bidi: bidi-override;
-        }
-        .horizontal-cn {
-          writing-mode:horizontal-tb;
-          direction: rtl;
-          unicode-bidi: bidi-override;
-        }
-        .auto-direction {
-          writing-mode: vertical-rl;
-          text-orientation: mixed;
-          width: 100%;
-          height: 100%;
-          overflow: auto;
-        }
-.pagination {
-  text-align: right;
-  writing-mode: horizontal-tb;
-}
-.pagination ul li {
-  float: right;
-}
-.table {
-  width: auto;
-}
-.table tr td{
-  width: auto;
-  text-orientation: upright;
-  text-orientation: upright;
-}
-.table-remove-border-vertical tr td {
-  border-top: none;
-}
-.table-remove-border-vertical tr th {
-  border-top: none;
-}
-.horizontal-cn form ul li {
-  float: right;
-}
-.horizontal-cn form ul li select option{
-  direction: rtl;
-  unicode-bidi: bidi-override;
-}
-.horizontal-cn table {
-  direction: rtl;
-  unicode-bidi: bidi-override;
-}
-.horizontal-cn table tr td {
-  direction: rtl;
-  unicode-bidi: bidi-override;
-}
-.latin-below {
-  writing-mode: horizontal-tb;
-  font-size: 0.5em;
-}
-.vertical_divider {
-  width: 5px;
-  background-color: #EAEFF5;
-}
+    direction: rtl;
+    unicode-bidi: bidi-override;
+  }
+  .pagination {
+    text-align: right;
+    writing-mode: horizontal-tb;
+  }
+  .pagination ul li {
+    float: right;
+  }
+  .table {
+    width: auto;
+  }
+  .table tr td{
+    width: auto;
+    text-orientation: upright;
+    text-orientation: upright;
+  }
+  .table-remove-border-vertical tr td {
+    border-top: none;
+  }
+  .table-remove-border-vertical tr th {
+    border-top: none;
+  }
+  .latin-below {
+    writing-mode: horizontal-tb;
+    font-size: 0.5em;
+  }
+  .vertical_divider {
+    width: 5px;
+    background-color: #EAEFF5;
+  }
 </style>
