--- a/ytenx/templates/vertical_style.html
+++ b/ytenx/templates/vertical_style.html
@@ -17,6 +17,7 @@
     margin-top: 1em;
   }
   .horizontal-cn {
+    float: right;
     writing-mode:horizontal-tb;
     direction: rtl;
     unicode-bidi: bidi-override;
@@ -28,6 +29,16 @@
     direction: rtl;
     unicode-bidi: bidi-override;
   }
+  .horizontal-cn ul {
+    float: right;
+  }  
+  .horizontal-cn ul li {
+    float: right;
+  }
+  .horizontal-cn ul li a {
+    direction: rtl;
+    unicode-bidi: bidi-override;
+  }  
   .horizontal-cn table {
     direction: rtl;
     unicode-bidi: bidi-override;
@@ -35,20 +46,13 @@
   .horizontal-cn table tr td {
     direction: rtl;
     unicode-bidi: bidi-override;
-  }  
+  }
   .sidebar-nav {
     writing-mode: horizontal-tb;
     direction: rtl;
     unicode-bidi: bidi-override;
   }
   .sidebar-nav ul li a {
-    direction: rtl;
-    unicode-bidi: bidi-override;
-  }
-  .horizontal-cn-nav ul li {
-    float: right;
-  }      
-  .horizontal-cn-nav ul li a {
     direction: rtl;
     unicode-bidi: bidi-override;
   }
