--- a/ytenx/templates/layout.html
+++ b/ytenx/templates/layout.html
@@ -44,12 +44,12 @@
           {% else %}
             <a id="brand" class="brand" href="{% url 'views.index_page' %}"><img src="/static/img/brand.gif" title="韻典網" width="100" height="40"></a>
           {% endif %}
-          <div class="nav-collapse horizontal-cn-nav">
-            <ul class="nav" {% if request.session.layout == 'vertical' %}style="float:right;"{% endif %}>
-              <li class="{% block index_active %}{% endblock %}" {% if request.session.layout == 'vertical' %}style="float:right;"{% endif %}>
+          <div class=" horizontal-cn nav-collapse">
+            <ul class=" horizontal-cn nav">
+              <li class=" horizontal-cn {% block index_active %}{% endblock %}">
                 <a href="{% url 'views.index_page' %}">首頁</a>
               </li>
-              <li class="{% block kyonh_active %}{% endblock %}" {% if request.session.layout == 'vertical' %}style="float:right;"{% endif %}>
+              <li class="{% block kyonh_active %}{% endblock %}">
                 <a href="{% url 'kyonh.views.index_page' %}">廣韻</a>
               </li>
               <li class="{% block trngyan_active %}{% endblock %}" {% if request.session.layout == 'vertical' %}style="float:right;"{% endif %}>
