--- a/ytenx/templates/vertical_style.html
+++ b/ytenx/templates/vertical_style.html
@@ -29,6 +29,9 @@
     direction: rtl;
     unicode-bidi: bidi-override;
   }
+  .horizontal-cn li {
+    float: right;
+  }  
   .horizontal-cn ul {
     float: right;
   }  
