--- a/ytenx/templates/layout.html
+++ b/ytenx/templates/layout.html
@@ -95,7 +95,7 @@
         </div>
       </div>
     </div>
-    <div class="container container-main">
+    <div class="container">
       <div class="auto-direction row">
         {% block body %}{% endblock %}
       </div>
