--- a/ytenx/templates/zim.html
+++ b/ytenx/templates/zim.html
@@ -51,7 +51,7 @@
       </p>
       <blockquote>{{dzih.ngieh}}</blockquote>
       {% if request.session.layout == 'vertical' %}
-        <div style="width: 5px; background-color: #EAEFF5"></div>
+        <div class="vertical_divider"></div>
         <br>
       {% endif %}
     {% endfor %}
@@ -108,7 +108,7 @@
         <blockquote>【正韻】{{dzih.ngieh}}</blockquote>
       {% endif %}
       {% if request.session.layout == 'vertical' %}
-        <div style="vertical_divider"></div>
+        <div class="vertical_divider"></div>
         <br>
       {% endif %}
     {% endfor %}
@@ -119,7 +119,7 @@
         <span class="badge badge-info">{{forloop.counter}}</span>
         <a href="{% url 'tcenghyonhtsen.views.sieux_yonh_page' dzih.sieux.ziox %}">{{dzih.dzih}}</a>
         {% if request.session.layout == 'vertical' %}        
-          <span style="writing-mode:horizontal-tb;font-size:0.75em">{{dzih.sieux.ipa}}</span>
+          <span class="latin-below">{{dzih.sieux.ipa}}</span>
         {% endif %}
       </h2>
       {% if request.session.layout != 'vertical' %}        
@@ -143,7 +143,7 @@
         <blockquote>【正韻】{{dzih.ngieh}}</blockquote>
       {% endif %}
       {% if request.session.layout == 'vertical' %}
-        <div style="vertical_divider"></div>
+        <div class="vertical_divider"></div>
         <br>
       {% endif %}
     {% endfor %}
@@ -163,7 +163,7 @@
       </p>
       <blockquote>{{dzih.ngieh}}</blockquote>
       {% if request.session.layout == 'vertical' %}
-        <div style="width: 5px; background-color: #EAEFF5"></div>
+        <div class="vertical_divider"></div>
         <br>
       {% endif %}
     {% endfor %}
@@ -199,7 +199,7 @@
       <p>擬音 {{dzih.ngix_1}}</p>
       <blockquote>{{dzih.tryoh}}</blockquote>
       {% if request.session.layout == 'vertical' %}
-        <div style="vertical_divider"></div>
+        <div class="vertical_divider"></div>
         <br>
       {% endif %}
     {% endfor %}
