--- a/ytenx/templates/zim.html
+++ b/ytenx/templates/zim.html
@@ -71,7 +71,7 @@
       </p>
       <blockquote>{{dzih.tryoh}}</blockquote>
       {% if request.session.layout == 'vertical' %}
-        <div style="vertical_divider"></div>
+        <div class="vertical_divider"></div>
         <br>
       {% endif %}
     {% endfor %}
