--- a/ytenx/templates/trngyan/dzih_pieux.html
+++ b/ytenx/templates/trngyan/dzih_pieux.html
@@ -7,24 +7,24 @@
 <div class="page-header">
   <h1>字表 <small>中原音韻</small></h1>
 </div>
-<table class="horizontal-cn">
+<table>
   <tr>
     <td>
-      <div class="span10">
+      <div class="horizontal-cn span10">
         <form class="form-search" method="get" action="{% url 'views.zim' %}">
           <input type="text" name="dzih" class="search-query span3">
           <input type="hidden" name="trngyan" value="1">
           <input type="hidden" name="jtkb" value="1">
           <input type="hidden" name="jtdt" value="1">
-          <button type="submit" class="btn btn-primary">檢索</button>
+          <button type="submit" class="horizontal-cn btn btn-primary">檢索</button>
         </form>
       </div>
     </td>
   </tr>
   <tr>
     <td>
-      <div class="auto-direction span7">      
-          <table class="table table-bordered table-condensed">
+      <div class="span7">
+        <table class="table table-bordered table-condensed">
           <tr>
             <th>次序</th>
             <th>字</th>
