--- a/ytenx/templates/trngyan/dzih_pieux.html
+++ b/ytenx/templates/trngyan/dzih_pieux.html
@@ -7,7 +7,7 @@
 <div class="page-header">
   <h1>字表 <small>中原音韻</small></h1>
 </div>
-<table>
+<table class="horizontal-cn">
   <tr>
     <td>
       <div class="horizontal-cn span10">
@@ -23,7 +23,7 @@
   </tr>
   <tr>
     <td>
-      <div class="span7">
+      <div class="auto-direction span7">
         <table class="table table-bordered table-condensed">
           <tr>
             <th>次序</th>
