--- a/ytenx/templates/trngyan/dzih_pieux.html
+++ b/ytenx/templates/trngyan/dzih_pieux.html
@@ -23,7 +23,7 @@
   </tr>
   <tr>
     <td>
-      <div class="auto-direction span7">
+      <div class="auto-direction span7" style="height:100%">
         <table class="table table-bordered table-condensed">
           <tr>
             <th>次序</th>
