--- a/ytenx/templates/trngyan/dzih_pieux.html
+++ b/ytenx/templates/trngyan/dzih_pieux.html
@@ -9,13 +9,13 @@
 </div>
 <div style="writing-mode:horizontal-tb">
   <div class="row">
-    <div class="span10">
+    <div class="horizontal-cn span10">
       <form class="form-search" method="get" action="{% url 'views.zim' %}">
         <input type="text" name="dzih" class="search-query span3">
         <input type="hidden" name="trngyan" value="1">
         <input type="hidden" name="jtkb" value="1">
         <input type="hidden" name="jtdt" value="1">
-        <button type="submit" class="btn btn-primary">檢索</button>
+        <button type="submit" class="horizontal-cn btn btn-primary">檢索</button>
       </form>
     </div>
   </div>
