--- a/ytenx/templates/vertical_style.html
+++ b/ytenx/templates/vertical_style.html
@@ -2,10 +2,15 @@
   .auto-direction {
     writing-mode: vertical-rl;
     text-orientation: mixed;
+    overflow: auto;
+  }
+  .auto-direction-fullsize {
+    writing-mode: vertical-rl;
+    text-orientation: mixed;
     width: 100%;
     height: 100%;
     overflow: auto;
-  }
+  }  
   .badge-info {
     writing-mode: horizontal-tb;
   }
