--- a/ytenx/templates/layout.html
+++ b/ytenx/templates/layout.html
@@ -96,7 +96,7 @@
       </div>
     </div>
     <div class="container">
-      <div class="auto-direction row">
+      <div class="auto-direction-fullsize row">
         {% block body %}{% endblock %}
       </div>
       <hr>
