--- a/ytenx/templates/kyonh/sieux_yonh_pieux.html
+++ b/ytenx/templates/kyonh/sieux_yonh_pieux.html
@@ -97,8 +97,8 @@
   </div>
 
   <div class="row">
-    <div class="auto-direction span8">
-        <table class="table table-bordered table-condensed">
+    <div class="span8">
+        <table class="auto-direction table table-bordered table-condensed">
         <tr>
           <th>次序</th>
           <th>小韻</th>
