--- a/ytenx/templates/kyonh/sieux_yonh_pieux.html
+++ b/ytenx/templates/kyonh/sieux_yonh_pieux.html
@@ -97,7 +97,7 @@
   </div>
 
   <div class="row">
-    <div class="span8" style="text-align:right">
+    <div class="span8" style="text-align:right;direction:rtl;">
       <table class="auto-direction table table-bordered table-condensed">
         <tr>
           <th>次序</th>
