--- a/ytenx/templates/kyonh/sieux_yonh_pieux.html
+++ b/ytenx/templates/kyonh/sieux_yonh_pieux.html
@@ -97,7 +97,7 @@
   </div>
 
   <div class="row">
-    <div class="span8" style="text-align:right;direction:rtl;">
+    <div class="span8" style="text-align:right;" align="right">
       <table class="auto-direction table table-bordered table-condensed">
         <tr>
           <th>次序</th>
@@ -144,8 +144,6 @@
         </tr>
         {% endfor %}
       </table>
-    </div>
-    <div class="span8">
       {% include "pagination.html" with list=sieux_yonh_pieux only %}
     </div>
   </div>
