--- a/ytenx/templates/kyonh/sieux_yonh_pieux.html
+++ b/ytenx/templates/kyonh/sieux_yonh_pieux.html
@@ -98,7 +98,7 @@
 
   <div class="row">
     <div class="span8" style="text-align:right;" align="right">
-      <table class="auto-direction table table-bordered table-condensed">
+      <table class="auto-direction table table-bordered table-condensed" style="text-align:right;" align="right">
         <tr>
           <th>次序</th>
           <th>小韻</th>
