--- a/ytenx/templates/kyonh/sieux_yonh_pieux.html
+++ b/ytenx/templates/kyonh/sieux_yonh_pieux.html
@@ -28,7 +28,7 @@
       <ul>
         <li>
           <label class="control-label" for="cjeng">聲</label>
-          <select name="cjeng" id="cjeng" class="horizontal-cn">
+          <select name="cjeng" id="cjeng">
             <option></option>
             {% for cjeng in cjeng_pieux %}
               {% if cjeng.dzih %}
@@ -97,8 +97,8 @@
   </div>
 
   <div class="row">
-    <div class="span8" style="text-align:right;" align="right">
-      <table class="auto-direction table table-bordered table-condensed" style="text-align:right;" align="right">
+    <div class="span8">
+      <table class="auto-direction table table-bordered table-condensed" align="right">
         <tr>
           <th>次序</th>
           <th>小韻</th>
