--- a/ytenx/templates/kyonh/sieux_yonh.html
+++ b/ytenx/templates/kyonh/sieux_yonh.html
@@ -7,8 +7,8 @@
 <div class="page-header">
   <h1>{{sieux_yonh}} <small>廣韻第{{sieux_yonh.ziox|sryoh}}小韻</small></h1>
 </div>
-<div class="row" style="height:100%;width:100%">
-  <div class="span4">
+<div class="row">
+  <div class="span4" style="height:none">
     <table class="table table-bordered">
     	<tr>
     	  <td>小韻</td>
