--- a/ytenx/templates/kyonh/sieux_yonh.html
+++ b/ytenx/templates/kyonh/sieux_yonh.html
@@ -8,7 +8,7 @@
   <h1>{{sieux_yonh}} <small>廣韻第{{sieux_yonh.ziox|sryoh}}小韻</small></h1>
 </div>
 <div class="row">
-  <div class="span4" style="height:none">
+  <div class="span4" style="width:none;">
     <table class="table table-bordered">
     	<tr>
     	  <td>小韻</td>
