--- a/ytenx/templates/kyonh/cjeng_mux.html
+++ b/ytenx/templates/kyonh/cjeng_mux.html
@@ -8,7 +8,7 @@
   <h1>{{cjeng}} <small>廣韻聲母{{cjeng.lyih}}</small></h1>
 </div>
 <div class="row">
-  <div class="span3">
+  <div class="span3" style="width:auto;">
     <h2>擬音</h2>
     <table class="table table-bordered">
     {% for mjeng, ngix in cjeng.ngix.items %}
