--- a/ytenx/templates/kyonh/cjeng_mux.html
+++ b/ytenx/templates/kyonh/cjeng_mux.html
@@ -35,7 +35,7 @@
     </table>
   </div>
 </div>
-<div class="span10">
+<div class="span10" style="width:auto;height:auto;overflow:auto">
   <div class="row" style="width:auto;height:auto;overflow:auto">
     <h2>小韻</h2>
     {% for sieux in cjeng.sieuxyonh_set.all %}
