--- a/ytenx/templates/vertical_style.html
+++ b/ytenx/templates/vertical_style.html
@@ -93,7 +93,13 @@
     width: 5px;
     background-color: #EAEFF5;
   }
+  .span3 {
+    width: auto;
+  }  
   .span4 {
     width: auto;
   }
+  .span8 {
+    width: auto;
+  }  
 </style>
