--- a/ytenx/templates/pyonh/dzih_pieux.html
+++ b/ytenx/templates/pyonh/dzih_pieux.html
@@ -8,7 +8,7 @@
   <h1>字表 <small>分韻撮要</small></h1>
 </div>
 <div class="row" style="display:inline">
-  <div class="horizontal-cn span10">
+  <div class="horizontal-cn span10" style="display:inline>
     <form class="form-search" method="get" action="{% url 'views.zim' %}">
       <input type="text" name="dzih" class="search-query span3">
       <input type="hidden" name="pyonh" value="1">
@@ -19,7 +19,7 @@
   </div>
 </div>
 <div class="row" style="display:inline">
-  <div class="span7">      
+  <div class="span7" style="display:inline>      
       <table class="table table-bordered table-condensed">
     	<tr>
     	  <th width="32">次序</th>
